{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 1064,
  "lineage": "a3037cb1-fa7c-4c5a-858d-748a8b9b11d5",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0062b622072515714",
            "arn": "arn:aws:ec2:eu-west-3:843961606884:instance/i-07ab498e287f432a8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ab498e287f432a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06270de2fbd88ed46",
            "private_dns": "ip-10-10-0-66.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.66",
            "public_ip": "13.38.11.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Author": "Cristian Escribano",
                  "Cloud_Provider": "AWS",
                  "Env": "PRO",
                  "Region": "Paris"
                },
                "throughput": 0,
                "volume_id": "vol-041776bcf155d003d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e01801942f4e0c77",
            "tags": {
              "Name": "server01"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "server01",
              "Region": "Paris"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058825ce14a41a6a5"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.sg_01",
            "module.networking.aws_subnet.vnet_public_subnet",
            "module.networking.aws_vpc.vnet_paris"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0062b622072515714",
            "arn": "arn:aws:ec2:eu-west-3:843961606884:instance/i-0e0612f02efd7157e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0612f02efd7157e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0581062a19f240a7d",
            "private_dns": "ip-10-10-0-158.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.158",
            "public_ip": "15.237.210.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Author": "Cristian Escribano",
                  "Cloud_Provider": "AWS",
                  "Env": "PRO",
                  "Region": "Paris"
                },
                "throughput": 0,
                "volume_id": "vol-08754d59280da4570",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e01801942f4e0c77",
            "tags": {
              "Name": "server02"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "server02",
              "Region": "Paris"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058825ce14a41a6a5"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.sg_01",
            "module.networking.aws_subnet.vnet_public_subnet",
            "module.networking.aws_vpc.vnet_paris"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0062b622072515714",
            "arn": "arn:aws:ec2:eu-west-3:843961606884:instance/i-0d571a53da5381316",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d571a53da5381316",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02707b73a55f27c8a",
            "private_dns": "ip-10-10-0-233.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.233",
            "public_ip": "13.38.78.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Author": "Cristian Escribano",
                  "Cloud_Provider": "AWS",
                  "Env": "PRO",
                  "Region": "Paris"
                },
                "throughput": 0,
                "volume_id": "vol-042645d93feb0c86f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e01801942f4e0c77",
            "tags": {
              "Name": "server03"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "server03",
              "Region": "Paris"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058825ce14a41a6a5"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.sg_01",
            "module.networking.aws_subnet.vnet_public_subnet",
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:843961606884:loadbalancer/lb01",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb01-806593413.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 5,
                "target": "HTTP:80/index.html",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "lb01",
            "idle_timeout": 60,
            "instances": [
              "i-07ab498e287f432a8",
              "i-0d571a53da5381316",
              "i-0e0612f02efd7157e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "lb01",
            "security_groups": [
              "sg-058825ce14a41a6a5"
            ],
            "source_security_group": "843961606884/SecurityGroup01",
            "source_security_group_id": "sg-058825ce14a41a6a5",
            "subnets": [
              "subnet-0e01801942f4e0c77"
            ],
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Region": "Paris"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2_pool",
            "module.networking.aws_security_group.sg_01",
            "module.networking.aws_subnet.vnet_public_subnet",
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:843961606884:internet-gateway/igw-0f8ed91f17ce1285c",
            "id": "igw-0f8ed91f17ce1285c",
            "owner_id": "843961606884",
            "tags": {
              "Name": "InternetGW"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "InternetGW",
              "Region": "Paris"
            },
            "vpc_id": "vpc-09165725c0ec74139"
          },
          "dependencies": [
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:843961606884:route-table/rtb-014c5de7bbe442176",
            "id": "rtb-014c5de7bbe442176",
            "owner_id": "843961606884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8ed91f17ce1285c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Region": "Paris"
            },
            "timeouts": null,
            "vpc_id": "vpc-09165725c0ec74139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gw",
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b30d354ba1f273e0",
            "route_table_id": "rtb-014c5de7bbe442176",
            "subnet_id": "subnet-0e01801942f4e0c77"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.vnet_public_subnet",
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:843961606884:security-group/sg-058825ce14a41a6a5",
            "description": "Allow SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058825ce14a41a6a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SecurityGroup01",
            "name_prefix": "",
            "owner_id": "843961606884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroup01"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "SecurityGroup01",
              "Region": "Paris"
            },
            "timeouts": null,
            "vpc_id": "vpc-09165725c0ec74139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vnet_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:843961606884:subnet/subnet-0aaa5596494862ff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaa5596494862ff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843961606884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetParis"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "PrivateSubnetParis",
              "Region": "Paris"
            },
            "vpc_id": "vpc-09165725c0ec74139"
          },
          "dependencies": [
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vnet_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:843961606884:subnet/subnet-0e01801942f4e0c77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e01801942f4e0c77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843961606884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnetParis"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "PublicSubnetParis",
              "Region": "Paris"
            },
            "vpc_id": "vpc-09165725c0ec74139"
          },
          "dependencies": [
            "module.networking.aws_vpc.vnet_paris"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vnet_paris",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:843961606884:vpc/vpc-09165725c0ec74139",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-075b614ed2e5c64e3",
            "default_route_table_id": "rtb-0ce9fcf70ca3662f7",
            "default_security_group_id": "sg-01fe9ae838c3bff00",
            "dhcp_options_id": "dopt-0e8f8593db57fb882",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09165725c0ec74139",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce9fcf70ca3662f7",
            "owner_id": "843961606884",
            "tags": {
              "Name": "Vnet_Paris"
            },
            "tags_all": {
              "Author": "Cristian Escribano",
              "Cloud_Provider": "AWS",
              "Env": "PRO",
              "Name": "Vnet_Paris",
              "Region": "Paris"
            }
          }
        }
      ]
    }
  ]
}